snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/error-0.1.0-20210817.081412-1-sources.jar.md5
2bbd320dd23ec5e6ccb80da02f02e652